--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
         <link rel="stylesheet" href="/index.css">
     </head>
     <body>
+        <nav>
+            <ul>
+                <li><img src="/images/logo.png" alt="My Learning Journal logo"></li>
+                <li>My Learning Journal</li>
+                <li>Home</li>
+                <li>About Me</li>
+            </ul>
+        </nav>
         <h1>index.html</h1>
     </body>
 </html>
