--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
         <!-- Title -->
         <title>My Learning Journal</title>
 
+        <!-- Viewport -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <!-- Google Fonts - Roboto -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
