# Add blog number one content
Added in the first blog, which at the moment contains filler text for the sake of styling purposes. Will later update the text to accurately reflect my learning journey.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
                     journey to become a fullstack developer.
                 </p>
             </section>
+            <section>
+                <article>
+                    <img src="/images/article-image-01.jpg">
+                    <p>January 1, 2000</p>
+                    <h2>Blog One</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla repellendus 
+                        error quia delectus nesciunt distinctio magni eveniet hic eum tempora maxime 
+                        perferendis facilis in possimus illo dicta, aperiam doloribus velit.</p>
+                </article>
+            </section>
         </main>
     </body>
 </html>
