Add class to blog one
Added class to blog number one. It now has a generic blog class, which will have shared CSS properties with the other blogs that will be later added.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </p>
             </section>
             <section>
-                <article>
+                <article class="blog blog-one">
                     <img src="/images/article-image-01.jpg">
                     <p>January 1, 2000</p>
                     <h2>Blog One</h2>
