Add view more link

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                         perferendis facilis in possimus illo dicta, aperiam doloribus velit.</p>
                 </article>
             </section>
+            <a class="view-more" href="#" target="_blank" rel="noreferrer noopener">View More</a>
         </main>
     </body>
 </html>
