Add footer section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                 </article>
             </section>
             <a class="view-more" href="#" target="_blank" rel="noreferrer noopener">View More</a>
+            <footer>
+                <h2>My Learning Journal</h2>
+                <p id="copyright">Copyright ©2025</p>
+            </footer>
         </main>
     </body>
 </html>
