--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             </section>
             <a class="view-more" href="#" target="_blank" rel="noreferrer noopener">View More</a>
             <footer>
-                <h2>My Learning Journal</h2>
-                <p id="copyright">Copyright ©2025</p>
+                <h2 class="m0">My Learning Journal</h2>
+                <p id="copyright" class="m0">Copyright ©2025</p>
             </footer>
         </main>
     </body>
