--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
                         perferendis facilis in possimus illo dicta, aperiam doloribus velit.</p>
                 </article>
             </section>
-            <a class="view-more" href="#" target="_blank" rel="noreferrer noopener">View More</a>
+            <div class="view-more-section">
+                <a href="#" target="_blank" rel="noreferrer noopener">View More</a>
+            </div>
             <footer>
                 <h2 class="m0">My Learning Journal</h2>
                 <p id="copyright" class="m0">Copyright ©2025</p>
