Update header elements to links
- Converted all text elements including the logo in the header to clickable links.

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <header>
             <nav>
                 <div class="container">
-                    <img src="/images/logo.png" alt="My Learning Journal logo">
-                    <p>My Learning Journal</p>
+                    <a href="#"><img src="/images/logo.png" alt="My Learning Journal logo"></a>
+                    <a href="#"><p>My Learning Journal</p></a>
                 </div>
                 <ul>
-                    <li>Home</li>
-                    <li>About Me</li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Me</a></li>
                 </ul>
             </nav>
         </header>
