--- a/main-blog.html
+++ b/main-blog.html
@@ -19,17 +19,17 @@
         <header>
             <nav>
                 <div class="container">
-                    <a href="/main-blog.html"><img src="/images/logo.png" alt="My Learning Journal logo"></a>
-                    <a href="#"><p>My Learning Journal</p></a>
+                    <a href="/index.html"><img src="/images/logo.png" alt="My Learning Journal logo"></a>
+                    <a href="/index.html"><p>My Learning Journal</p></a>
                 </div>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="/index.html">Home</a></li>
                     <li><a href="#">About Me</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            
+
         </main>
         <footer>
             <h2 class="m0">My Learning Journal</h2>
