--- a/main-blog.html
+++ b/main-blog.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         
         <!-- Link to CSS -->
-        <link rel="stylesheet" href="/index.css">
+        <link rel="stylesheet" href="/styles/global.css">
     </head>
     <body>
         <header>
