--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         
         <!-- Link to CSS -->
         <link rel="stylesheet" href="/styles/global.css">
+        <link rel="stylesheet" href="/styles/index.css">
     </head>
     <body>
         <header>
