Add Filler Text for Layout Testing
- Inserted placeholder text to test and adjust the layout.

--- a/main-blog.html
+++ b/main-blog.html
@@ -38,6 +38,7 @@
                     journey to become a fullstack developer.
                 </p>
                 <img class="img-main" src="/images/article-image-hero-large.jpg">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis id cumque dolorem, consequatur necessitatibus quaerat dolor repellendus nesciunt nihil, nulla a incidunt repellat est deserunt hic ipsum assumenda voluptatibus. Minus!</p>
             </section>
         </main>
         <footer>
