--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <header>
             <nav>
                 <div class="container">
-                    <a href="#"><img src="/images/logo.png" alt="My Learning Journal logo"></a>
-                    <a href="#"><p>My Learning Journal</p></a>
+                    <a href="/index.html"><img src="/images/logo.png" alt="My Learning Journal logo"></a>
+                    <a href="/index.html"><p>My Learning Journal</p></a>
                 </div>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Me</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/about-me.html">About Me</a></li>
                 </ul>
             </nav>
         </header>
