--- a/main-blog.html
+++ b/main-blog.html
@@ -25,7 +25,7 @@
                 </div>
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="#">About Me</a></li>
+                    <li><a href="/about-me.html">About Me</a></li>
                 </ul>
             </nav>
         </header>
