Add hero section to about-me.html
- Added the hero section to the `about-me.html` webpage, which includes a title, subheading, and image.

--- a/about-me.html
+++ b/about-me.html
@@ -31,7 +31,11 @@
         </header>
     </body>
     <main>
-        
+        <section class="hero">
+            <h1>Welcome to My Learning Journal</h1>
+            <h2>The CCNA Changed My Life</h2>
+            <img src="/images/ccna.png">
+        </section>
     </main>
     <footer>
         <h2 class="m0">My Learning Journal</h2>
