Add filler content for layout
- Added h3 and p tags with filler content that will later be changed in a future update.

--- a/about-me.html
+++ b/about-me.html
@@ -36,6 +36,12 @@
             <h2>The CCNA Changed My Life</h2>
             <img src="/images/ccna.png">
         </section>
+        <section class="blog blog-padding">
+            <article>
+                <h3>The Start of my Learning Journey</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus placeat, blanditiis quas officia pariatur provident recusandae facilis laudantium nam velit numquam fuga vel aliquid natus sit dolorum enim fugit praesentium.</p>
+            </article>
+        </section>
     </main>
     <footer>
         <h2 class="m0">My Learning Journal</h2>
