Update class name of blog
- Updated the class name of blog to blog-main for clarity.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     journey to become a fullstack developer.
                 </p>
             </section></a>
-            <section class="blog">
+            <section class="blog-main">
                 <article>
                     <div class="blog-container">
                         <a class="img-link" href="#"><img src="/images/article-image-01.jpg"></a>
