Replace filler text in about-me
Replaced placeholder text in the subheading "The Start of My Learning Journey" with comprehensive and relevant details about the topic.

--- a/about-me.html
+++ b/about-me.html
@@ -32,14 +32,16 @@
     </body>
     <main>
         <section class="hero">
-            <h1>Welcome to My Learning Journal</h1>
+            <h1>Welcome to Mark's Learning Journal</h1>
             <h2>The CCNA Changed My Life</h2>
             <img src="/images/ccna.png">
         </section>
         <section class="blog blog-padding">
             <article>
                 <h3>The Start of my Learning Journey</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus placeat, blanditiis quas officia pariatur provident recusandae facilis laudantium nam velit numquam fuga vel aliquid natus sit dolorum enim fugit praesentium.</p>
+                <p>
+                    It all began in June of 2024 when I had an unexpected and fateful reunion with an old acquaintance. They had recently passed the CCNA certification exam and, after some friendly small talk, they encouraged me to pursue the same path. Despite my initial doubts—having no prior knowledge of networking—and grappling with a mid-life crisis about my career direction, I took a leap of faith. Without overthinking it, I embarked on my journey to earn my first certification: the CCNA.
+                </p>
             </article>
         </section>
     </main>
