--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         
         <!-- Link to CSS -->
-        <link rel="stylesheet" href="/styles/global.css">
-        <link rel="stylesheet" href="/styles/index.css">
+        <link rel="stylesheet" href="./src/styles/global.css">
+        <link rel="stylesheet" href="./src/styles/index.css">
     </head>
     <body>
         <header>
